style.css
/* ... */
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
  list-style-type: none;
  text-decoration: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

html {
  font-size: 100%;
  scroll-behavior: smooth;
  height: -webkit-fill-available;
}

body {
  font-family: "Lato", sans-serif;
  display: flex;
  flex-direction: column;
  height: 100vh;
  margin: 0;
  background-color: var(--colore-idroleleBianco);
  color: #240904;
  z-index: 1;
  position: relative;
  min-height: 100vh;
}

a {
  display: inline-block !important;
}

a:visited {
  color: var(--colore-rosso);
}

i {
  padding: 6px;
}

ul,
li,
a,
button {
  text-decoration: none;
  color: inherit;
  user-select: none;
  border: none;
  outline: none;
  background: none;
}

img {
  display: block;
  max-width: 100%;
  object-fit: cover;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: -moz-crisp-edges;
  image-rendering: crisp-edges;
}

br {
  /* line-height: 2em; */
  margin-bottom: 20px;
}

hr {
  background: var(--gradiente-rosso-blu);
  height: 3px;
  border: none;
  border-radius: 5px;
  margin: 10px 0px 10px 0px;
  opacity: 0.8;
  width: 100%;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

li {
  display: inline-block;
  margin-right: 10px;
}

h1 {
  font-size: 36px;
  margin: 0;
}

/* HEADER START */
header {
  height: 152px;
  background-color: var(--colore-verdemareSfumato85);
  color: var(--colore-idroleleBianco);
  /* padding: 10px 20px 10px 50px; */
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 164px;
  box-shadow: var(--multi-shadow);
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 5rem;
  padding-right: 5rem;
}

#background-image {
  position: absolute;
  width: 100%;
  height: 140px;
  z-index: -1;
  object-fit: cover;
}

nav.nav-desktop {
  display: block;
}

nav.nav-responsive {
  display: none;
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  margin: 10px;
  justify-content: center;
}

nav ul li {
  margin: 0 10px;
}

nav ul li a {
  text-decoration: none;
  font-size: 18px;
  padding: 10px;
  transition: background-color 0.3s ease;
  color: var(--colore-idroleleBianco);
}

div,
p {
  font-size: 18px;
}

nav p a {
  font-size: 18px;
  padding: 10px;
  transition: background-color 300ms ease;
}

nav ul li a:hover,
nav p a:hover {
  background-color: var(--colore-idroleleBianco);
  color: var(--colore-verdemare);
  /* color: var(--colore-Nero); */
}

a#emergenza {
  background-color: rgba(255, 255, 255, 0.3);
  box-shadow: var(--multi-shadow);
  border-radius: 1px;
  padding: 12px 20px 12px 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  transition: all 200ms ease-out;
}

a#emergenza:hover {
  background-color: rgba(255, 255, 255, 0.85);
  color: var(--colore-verdemare);
}

#main-logo {
  height: 120px;
  transition: all 300ms ease;
}

#main-logo:hover {
  /* filter: grayscale(1) brightness(4); */
  filter: brightness(1.3);
}
/* HEADER END */

/* CONTENT START */
section {
  margin: 0px;
  width: 100%;
  margin-inline: auto;
  padding-block-start: 2.5rem;
  padding-left: 5rem;
  padding-right: 5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  transition: opacity 800ms ease-out;
}

section.fadeIn {
  opacity: 1;
}

div.section-description {
  width: 100%;
}

.container {
  /* max-width: 75rem; */
  height: auto;
  margin-inline: auto;
  padding-inline: 1.25rem;
}

.content {
  margin: 0;
  width: 100%;
  max-width: 100%;
}

/* SPLIDE start*/

.splide__slide {
  /* transform: scale(0.8, 0.8); */
  display: inline-flex;
  vertical-align: middle;
  justify-content: center;
  align-items: center;
}

.splide_description {
  /* temp hidden */
  visibility: hidden;
  padding-top: 10px;
}

.splide__progress__bar {
  height: 3px;
  background: var(--gradiente-rosso-blu);
  opacity: 0.5;
}

.is-active {
  opacity: 1;
}

.slider-text {
  padding-top: 20px;
}

.splide__toggle {
  margin: 6px;
  /* margin-left: 20px; */
  outline: 0;
  border-radius: 50%;
  display: inline-flex;
  width: 1.8rem;
  height: 1.8rem;
  align-items: center;
  justify-content: center;
  margin-right: 0.5rem;
  background-color: var(--colore-grigio);
  fill: #95a5a6;
  transition: background-color 200ms ease;
}

.splide__toggle:hover {
  fill: var(--colore-grigio);
  background-color: var(--colore-idroleleRosso);
}

.splide__toggle svg {
  height: 40%;
  width: 40%;
}

button.splide__pagination__page.is-active {
  background: var(--colore-idroleleRosso) !important;
  fill: var(--colore-idroleleRosso) !important;
}
/* SPLIDE end*/

/* ----servizi start */
section#servizi {
  justify-content: start;
  margin-top: 40px;
  min-height: 90vh;
  background-color: var(--colore-grigio);
  /* padding-top: 40px; */
  padding-bottom: 80px;
}

#interactive-container {
  display: flex;
  justify-content: space-between;
  flex-direction: row-reverse;
  width: 100%;
  height: auto;
}

#logo-testo {
  position: relative;
  padding: 20px;
  padding-top: 40px;
  width: 100%;
  height: auto;
  flex-basis: 40%;
}

#logo-vector-container {
  float: right;
  padding-top: 30px;
  min-width: 250px;
  height: 100%;
  width: 50vw;
  height: auto;
}

svg {
  width: 100%;
  height: 100%;
  max-height: 80vh;
}

path.st2 {
  fill: var(--colore-grigioScuro);
}

svg g.blocco-interattivo {
  fill: var(--colore-grigio2);
  transition: fill 200ms ease-out;
  padding: 10px;
}

/* svg g.blocco-interattivo:hover,
svg g.blocco-interattivo:focus, */
svg g.blocco-interattivo.selected {
  fill: var(--colore-neroPuro);
  cursor: pointer;
}
/* ... */

